--- a/MessageBoard/Views/Home/Contact.cshtml
+++ b/MessageBoard/Views/Home/Contact.cshtml
@@ -4,137 +4,94 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@section scripts
+{
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
 
-      <div class="span12 hidden-desktop">
-          <div class="padd"><div class="navis"></div></div>
-      </div>
-      <div class="visible-desktop">
-      <div class="span3 sidey">
-        <!-- Sidebar Starts Here -->
-        <div class="padd sidebar">
-          <!-- Each sidebar should be enclosed inside "widget class" -->
-          <!-- 1st widget -->
-          <div class="widget">
-            <!-- Sidebar heading enclosed inside h3. Don't forget to add the class "matopen". -->
-            <h3 class="matopen">Search</h3>
-            <!-- Sidebar content should be enclosed inside div with the class "matter". -->
-            <div class="matter">
-              <!-- Search form -->
-              <form class="form-search">
-                <input type="text" class="input-medium search-query" placeholder="Type to Search...">
-              </form>
-            </div>
-          </div>
-          <!-- 2nd widget -->
-          <div class="widget">
-            <h3 class="matopen">Categories</h3>
-            <div class="matter">
-             <ul>
-              <li><a href="#">Condimentum</a></li>
-              <li><a href="#">Etiam at</a></li>
-              <li><a href="#">Fusce vel</a></li>
-              <li><a href="#">Vivamus</a></li>
-              <li><a href="#">Pellentesque</a></li>
-             </ul>
-            </div>
-          </div>
-          <!-- 3rd widget -->
-          <div class="widget">
-            <h3 class="matopen">Recent Posts</h3>
-            <div class="matter">
-              <ul>
-                <li><a href="#">Sed eu leo orci, condimentum gravida metus</a></li>
-                <li><a href="#">Etiam at nulla ipsum, in rhoncus purus</a></li>
-                <li><a href="#">Fusce vel magna faucibus felis dapibus facilisis</a></li>
-                <li><a href="#">Vivamus scelerisque dui in massa</a></li>
-                <li><a href="#">Pellentesque eget adipiscing dui semper</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- Sidebar Ends Here -->
-      </div>
-      </div>
-      <div class="span9">
-        <div class="whity content">
-          <!-- Main Content Starts Here -->
-          <!-- Content should be encloased inside div with the class "posts" -->
-          <div class="posts">
+
+<div class="span12 hidden-desktop">
+    <div class="padd"><div class="navis"></div></div>
+</div>
+
+<div class="span12">
+    <div class="whity content">
+        <!-- Main Content Starts Here -->
+        <!-- Content should be encloased inside div with the class "posts" -->
+        <div class="posts">
             <!-- Each entry should be enclosed inside div with the class "entry" -->
             <div class="entry">
-               <div class="padd">
-                 <!-- Contact Page title -->
-                 <h2>Contact Us</h2>
-                 <!-- Contact Page Para -->
-                 <p>Fusce imperdiet, risus eget viverra faucibus, diam mi vestibulum libero, ut vestibulum tellus magna nec enim. Nunc dapibus varius interdum. Phasellus at lorem ut lectus fermentum convallis.</p>
-              </div>
+                <div class="padd">
+                    <!-- Contact Page title -->
+                    <h2>Contact Us</h2>
+                    <!-- Contact Page Para -->
+                    <p>Fusce imperdiet, risus eget viverra faucibus, diam mi vestibulum libero, ut vestibulum tellus magna nec enim. Nunc dapibus varius interdum. Phasellus at lorem ut lectus fermentum convallis.</p>
+                </div>
 
-              <div class="row">
-               <div class="span5">
-                  <div class="padd">
-                     <div class="co-form">
-                       <form class="form-horizontal">
-                         <fieldset>
-                           <div class="control-group">
-                             <label class="control-label" for="name">Name</label>
-                             <div class="controls">
-                               <input type="text" class="input-medium" id="name">
-                             </div>
-                           </div>
-                           <div class="control-group">
-                             <label class="control-label" for="email">Email</label>
-                             <div class="controls">
-                               <input type="text" class="input-medium" id="email">
-                             </div>
-                           </div>
-                           <div class="control-group">
-                             <label class="control-label" for="website">Website</label>
-                             <div class="controls">
-                               <input type="text" class="input-medium" id="website">
-                             </div>
-                           </div>
-                           <div class="control-group">
-                             <label class="control-label" for="comment">Message</label>
-                             <div class="controls">
-                               <textarea class="input-medium" id="comment" rows="3"></textarea>
-                             </div>
-                           </div>
-                           <div class="form-actions">
-                             <button type="submit" class="btn">Send</button>
-                           </div>
-                         </fieldset>
-                       </form>
-                     </div>
-                  </div>
-               </div>
-               <div class="span3">
-                  <div class="padd">
-                     <p class="caddress">
-                        <address>
-                          <strong>Twitter, Inc.</strong><br>
-                          795 Folsom Ave, Suite 600<br>
-                          San Francisco, CA 94107<br>
-                          <abbr title="Phone">P:</abbr> (123) 456-7890.<br><br>
-                          <strong>Full Name</strong><br>
-                          <a href="mailto:#">first.last@gmail.com</a>
-                        </address>
-                     </p>
-                  </div>
-               </div>
+                <div class="row">
+                    <div class="span8">
+                        <div class="padd">
+                            <div class="co-form">
+                                <form class="form-horizontal" method="post">
+                                    <fieldset>
+                                        <div class="control-group">
+                                            <label class="control-label" for="name">Name</label>
+                                            <div class="controls">
+                                                <input type="text" class="input-medium" id="name" name="name" data-val="true" data-val-required="*">
+                                                <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
+                                            </div>
+                                        </div>
+                                        <div class="control-group">
+                                            <label class="control-label" for="email">Email</label>
+                                            <div class="controls">
+                                                <input type="text" class="input-medium" id="email" name="email" data-val="true" data-val-required="*" data-val-email="Invalid email">
+                                                <span class="field-validation-valid" data-valmsg-for="email" data-valmsg-replace="true"></span>
+                                            </div>
+                                        </div>
+                                        <div class="control-group">
+                                            <label class="control-label" for="website">Website</label>
+                                            <div class="controls">
+                                                <input type="text" class="input-medium" id="website" name="website" data-val="true" data-val-required="*">
+                                                <span class="field-validation-valid" data-valmsg-for="website" data-valmsg-replace="true"></span>
+                                            </div>
+                                        </div>
+                                        <div class="control-group">
+                                            <label class="control-label" for="comment">Message</label>
+                                            <div class="controls">
+                                                <textarea class="input-medium" id="comment" rows="3" name="comments"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="form-actions">
+                                            <button type="submit" class="btn">Send</button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="span4">
+                        <div class="padd">
+                            <p class="caddress">
+                                <address>
+                                    <strong>Twitter, Inc.</strong><br>
+                                    795 Folsom Ave, Suite 600<br>
+                                    San Francisco, CA 94107<br>
+                                    <abbr title="Phone">P:</abbr> (123) 456-7890.<br><br>
+                                    <strong>Full Name</strong><br>
+                                    <a href="mailto:#">first.last@gmail.com</a>
+                                </address>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-                 <div class="gmap">
-                  <div class="padd">
-                     <!-- Goto Google maps and copy the embed code of your location. Replace the below embed code with your code. -->
-                     <iframe height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Google+India+Bangalore,+Bennigana+Halli,+Bangalore,+Karnataka&amp;aq=0&amp;oq=google+&amp;sll=9.930582,78.12303&amp;sspn=0.192085,0.308647&amp;ie=UTF8&amp;hq=Google&amp;hnear=Bennigana+Halli,+Bangalore,+Bengaluru+Urban,+Karnataka&amp;t=m&amp;ll=12.993518,77.660294&amp;spn=0.012545,0.036006&amp;z=15&amp;output=embed"></iframe>
-                  </div>
-                 </div>
-            </div>
-          </div>
-          <!-- Main Content Ends Here -->
         </div>
+        <!-- Main Content Ends Here -->
+    </div>
 
-      </div>
+</div>
 
-      <div class="mobily hidden-desktop">
+<div class="mobily hidden-desktop">
 
-      </div>
+</div>
