--- a/MessageBoard/Templates/topicsView.html
+++ b/MessageBoard/Templates/topicsView.html
@@ -2,7 +2,7 @@
 
     <h1 class="heading">Messages</h1>
 
-    <div>Message count: {{messages.length}}</div>
+    <div>Message count: {{data.topics.length}}</div>
 
     <a href="#!/newMessage">New message</a>
 
@@ -11,7 +11,7 @@
     </div>
 
     <div class="messages">
-        <div class="message row" ng-repeat="i in messages">
+        <div class="message row" ng-repeat="i in data.topics">
             <div class="title span10">{{i.title}}</div>
             <div class="date span2">{{i.created | date: "medium" }}</div>
             <div class="contents span12">{{i.body}}</div>
